vlib/v/checker/tests/no_interface_str.out
vlib/v/checker/tests/no_interface_str.v:18:12: error: <Animal> interface does not have an .str() method. Use typeof() instead
   16 | fn moin() {
   17 |     a := get_animal()
   18 |     println(a.str())
      |               ~~~~~
   19 | }
