vlib/v/checker/tests/no_interface_str.vv
interface Animal {
	speak()
}

struct Cow {
}

fn (_ Cow)speak() {
	println('moo')
}

fn get_animal() Animal {
	return Cow{}
}

fn moin() {
	a := get_animal()
	println(a.str())
}
